fix input and background

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,6 +76,10 @@
   gap: 10px;
 }
 
+.under-range__price::after {
+  content: "$";
+}
+
 .under-range:not(:last-child) {
   padding-bottom: 20px;
 }
